# MARS

./: README.md
agentmath/: README.md  pyproject.toml
agentmath/src/agentmath/: crew.py  db.py  human_callback.py  main.py  tavily_mcp_server.py
agentmath/src/agentmath/config/: agents.yaml  tasks.yaml
ai-agents/: pyvenv.cfg
ai-agents/Scripts/: activate  activate.bat  docx2txt  dumppdf.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
ai_agents_rec/: README.md  pyproject.toml
ai_agents_rec/db/: chroma.sqlite3
ai_agents_rec/src/ai_agents_rec/: crew.py  main.py
ai_agents_rec/src/ai_agents_rec/config/: agents.yaml  tasks.yaml
crewai_agents/mars/: .env
frontend/math-agent/: package-lock.json  package.json
frontend/math-agent/src/: App.css  App.js
mars/: README.md  agents-tasks.txt  pyproject.toml  report.md
mars/results/: 24-06-2025_20-55-55_nuclear_radiation_effects_on_genetic_composition.md  25-06-2025_19-22-13_Sickle_cell_anemia_in_women_above_40.md  25-06-2025_19-24-52_duck_shaped_rheumatoid_arthritis.md  26-06-2025_05-57-45_postop_issues_and_patient_care_for_these.md  26-06-2025_06-04-05_survival_rates_in_india_for_patients_with_laryngeal_cancer.md  26-06-2025_07-44-03_occurence_of_type_2_diabetes_in_men_above_35_years_of_age.md  26-06-2025_07-50-12_survival_rates_of_patients_in_india_having_stage_3_lung_cancer.md
mars/src/mars/: crew.py  main.py
mars/src/mars/config/: agents.yaml  tasks.yaml
med-researcher/: README.md  package-lock.json  package.json
med-researcher/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
med-researcher/src/lib/: api.ts  (+3 more)
researcher/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt
researcher/src/: config.ts  db.ts  server.ts  types.ts  utils.ts
(+24 files in other folders)
