[project]
name = "ai_agents_rec"
version = "0.1.0"
description = "ai-agents-rec using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
ai_agents_rec = "ai_agents_rec.main:run"
run_crew = "ai_agents_rec.main:run"
train = "ai_agents_rec.main:train"
replay = "ai_agents_rec.main:replay"
test = "ai_agents_rec.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
