[project]
name = "mars"
version = "0.1.0"
description = "mars using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
]

[project.scripts]
mars = "mars.main:run"
run_crew = "mars.main:run"
train = "mars.main:train"
replay = "mars.main:replay"
test = "mars.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
